Luka | #9 | Changed the change password test sequentially before running the remaining functional tests in parallel.